<resources>
    <string name="app_name">Toffee</string>
    <string name="app_name_short">Toffee</string>
    <string name="retry">Retry</string>
    <string name="exit_from_app_msg">Are you sure to Sign out from the %s app?</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_subscribe">SUBSCRIBE</string>
    <string name="sign_in_text">Sign In</string>
    <string name="without_sign_in_text">Continue without Sign in</string>
    <string name="sign_in_top_text">To get started, please provide the following information</string>
    <string name="sign_in_countdown_text">Resend OTP in %ss</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="resend_code_text">Resend Code </string>
    <string name="default_settings">Default Data and Video Quality</string>
    <string name="data_usage_message">Higher quality video uses more data. Data usage may vary based on network conditions.</string>
    <string name="txt_video_resolution">Video Resolution: %s</string>
    <string name="profile_1920x1080">Need 2Mbps+ bandwidth</string>
    <string name="profile_1280x720">Need 1Mbps+ bandwidth</string>
    <string name="profile_720x576">Need 512kbps+ bandwidth</string>
    <string name="profile_480x320">Need 384kbps+ bandwidth</string>
    <string name="profile_320x240">Need 256kbps+ bandwidth</string>
    <string name="profile_240x160">Need 128kbps+ bandwidth</string>
    <string name="menu_add_to_fav">Add to Favorites</string>
    <string name="menu_share">Share</string>
    <string name="menu_not_interested">Not Interested</string>
    <string name="app_id">F78B8DE7</string>
    <string name="phone_no_required_title">Phone Number Required!</string>
    <string name="signin_using_password_text">Sign in using Password</string>
    <string name="view_all">View All</string>
    <string name="edit_profile_button">EDIT</string>
    <string name="channel">Live</string>
    <string name="recent_channels">Recently Viewed</string>
    <string name="most_popular">Most Popular</string>
    <string name="most_popular_playlists">Most Popular Playlists</string>
    <string name="categories">Categories</string>
    <string name="user_channels">Trending Channels</string>
    <string name="trending_now">Editor\'s Choice</string>
    <string name="featured">Featured</string>
    <string name="vod">Videos</string>
    <string name="latest_video">Feed</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_and_conditions">Terms &amp; Conditions </string>
    <string name="terms_and_conditions_text">I agree to the Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="add_your_email">Add Your Email</string>
    <string name="add_your_phone">Add Your Phone Number</string>
    <string name="add_your_name">Add Your Name</string>
    <string name="change_password_button">Change Password</string>
    <string name="profile">Account</string>
    <string name="toffee_premium">TOFFEE Premium</string>
    <string name="profile_edit">Profile - Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="check_update">Check Update</string>
    <string name="all_channels">All Channels</string>
    <string name="free_trial_text">You are enjoying free trial</string>
    <string name="free_trial">Free Trial</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="enter_code">Enter OTP</string>
    <string name="photo_update_success">Photo updated successfully</string>
    <string name="tag_line_txt">Watch TV &amp; Video Seamlessly!</string>
    <string name="powered_by_txt">Streaming and Content copyright for TV managed by <b>Nexdecade Technology (Pvt.) Ltd.</b> For any query please contact at <b>content@nexdecade.com</b></string>
    <string name="next">Next</string>
    <string name="days_left">%1$d days left</string>
    <string name="weekly_trial">Weekly Pack</string>
    <string name="strike_text"><strike>৳120</strike></string>
    <string name="subscribed_pack">Subscribed</string>
    <string name="daily_pack">Daily Pack</string>
    <string name="subscription_to">Subscription to</string>
    <string name="subscription_amount">Subscription Amount</string>
    <string name="validity">Validity</string>
    <string name="confirm_purchase_text"><b>৳120</b> will be deducted from your balance after you tap \'Confirm Purchase\'</string>
    <string name="confirm_purchase_formatted_text">৳%1$d will be deducted from your balance after you tap \'Confirm Purchase\'</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="confirm">Confirm</string>
    <string name="auto_renew_formatted_text">Auto Renew in %1$d %2$s</string>
    <string name="subscribe_text">Subscribe ৳30</string>
    <string name="discount_formatted_text"><strike>৳%1$d</strike></string>
    <string name="amount_formatted_text">৳%1$d</string>
    <string name="day_formatted_text">%1$d days</string>
    <string name="single_day_formatted_text">%1$d day</string>
    <string name="formatted_channel_number_text">%1$d Channels</string>
    <string name="package_price_formatted_text">%1$d TK/%2$s</string>
    <string name="menu_create_text">Submit Your Video</string>
    <string name="menu_channel_text">TV Channels</string>
    <string name="menu_faqs_text">FAQs</string>
    <string name="views">views</string>
    <string name="refer_a_friend_txt">Refer a Friend</string>
    <string name="menu_toffee_premium">Toffee Premium</string>
    <string name="redeem_code_txt">Redeem Referral Code</string>
    <string name="invite_friends_txt">Refer Friends</string>
    <string name="redeem_button">Redeem</string>
    <string name="share_button">Share</string>
    <string name="copy_button">Copy</string>
    <string name="copy_to_clipboard">Copy to clipboard successfully</string>
    <string name="invalid_referral_code_txt">Your referral code is invalid</string>
    <string name="do_you_continue_txt">Continue without code</string>
    <string name="referral_code">Referral Code</string>
    <string name="have_referral_code">Have Referral Code?</string>
    <string name="tab_feed_label">Home</string>
    <string name="tab_live_label">Live</string>
    <string name="tab_upload_label">Upload</string>
    <string name="tab_explore_label">Explore</string>
    <string name="tab_sports_label">Sports</string>
    <string name="tab_movies_label">Movies</string>
    <string name="tab_webseries_label">Web Series</string>
    <string name="tab_mychannel_label">My Channel</string>
    <string name="try_again_txt">Try again</string>
    <string name="continue_sign_in_txt">Continue signing in</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="track_selection_title">Track Title</string>
    <string name="otp_hint">OTP</string>
    <string name="topic_msg_subscribed">"Topic subscribed successfully "</string>
    <string name="topic_msg_subscribe_failed">Topic subscribe failed</string>
    <string name="subscription_text">You have successfully subscribed to </string>
    <string name="back_to_home">Back to Home</string>
    <string name="subscribe_pack">You need to subscribe premium pack to view this channel</string>
    <string name="grant_camera_permission">This feature needs Camera permission</string>
    <string name="no_activity_msg">Something went wrong. Please try again.</string>
    <string name="auto_rotation_on">Auto rotation on</string>
    <string name="auto_rotation_off">Auto rotation off</string>
    <string name="refer_policy">Refer Toffee to a friend and enjoy up to 250 MB free internet</string>
    <string name="menu_internet_pack">Buy Internet Packs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grant_storage_permission">This feature needs Storage permission</string>
    <string name="text_unsubscribe_title">Are You Sure to Unfollow?</string>
    <string name="upload_selection_heading">Upload FREE from\nBanglalink Internet!</string>
    <string name="thumb_selection_heading">Set Video Thumbnail</string>
    <string name="txt_learn_more">Learn More</string>
    <string name="btn_open_camera">Camera</string>
    <string name="btn_open_gallery">Gallery</string>
    <string name="upload_status_text">%1$s %2$s</string>
    <string name="live_watching_text">%1$s Watching</string>
    <string name="minimize_panel_description">Your video will be submitted for review. Once approved, it will be published in your channel soon.</string>
    <string name="latestVideos">Latest Videos</string>
    <string name="trendingVideos">Trending Videos</string>
    <string name="read_more">Show More</string>
    <string name="read_less">Show Less</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="phone_number_hint"><i>Your Phone Number</i></string>
    <string name="channel_name_hint"><i>Set Your Channel Name</i></string>
    <string name="phoneNumberHint"><i>Enter Phone Number</i></string>
    <string name="otpHint"><i>Enter OTP</i></string>
    <string name="txt_close">Close</string>
    <string name="txt_movies">Movies</string>
    <string name="txt_msg_success">Success</string>
    <string name="txt_redeem_code">Redeem code</string>
    <string name="txt_content_loader">Content Loader</string>
    <string name="txt_empty">Empty</string>
    <string name="txt_category">Category</string>
    <string name="txt_placeholder">Placeholder</string>
    <string name="txt_profile_image">Profile Image</string>
    <string name="txt_back">back</string>
    <string name="txt_avatar">Avatar</string>
    <string name="txt_terms_condition">TermsAndCondition</string>
    <string name="txt_free_package">Free Package</string>
    <string name="txt_badge_icon">Badge Icon</string>
    <string name="txt_refer_friend">Refer Friend</string>
    <string name="txt_channel_logo">Channel Logo</string>
    <string name="txt_edit_channel_logo">Edit Channel Logo</string>
    <string name="skip_text">Skip</string>
    <string name="cancel_text">Cancel</string>
    <string name="login_with_phone_image">Phone Login</string>
    <string name="resend_text">Resend</string>
    <string name="submit_button_text">Submit</string>
    <string name="sign_in_intro_title">Sign in to Access All Features</string>
    <string name="i_agree_to_the_text">&#160;&#160;I agree to the Creators\'&#160;</string>
    <string name="enter_otp_text">Enter OTP</string>
    <string name="resend_otp_in_59s_text">Resend OTP in 59s</string>
    <string name="name_error_text">*Name is required</string>
    <string name="enter_your_email_text">Enter your email</string>
    <string name="enter_your_address_text">Enter your address</string>
    <string name="lets_fill_some_basic_info_text">Let\'s fill in some basics to start off…</string>
    <string name="set_your_channel_logo">Set Your Channel Logo</string>
    <string name="your_name_text">Your Name</string>
    <string name="address_null_error_text">*Address is Required</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="nid_number">NID Number</string>
    <string name="verification_email_sent">*Verification email will be sent to you</string>
    <string name="your_nid_must_match">*Your NID must match with your name &amp; date of birth</string>
    <string name="Date_of_birth_must_be_match">*You must be 18 years or older</string>
    <string name="channel_name_limit">%d/50</string>
    <string name="get_bl_sim">Get more with Banglalink SIM</string>
</resources>