<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/menu_feed" android:icon="@drawable/ic_menu_home"
        android:title="@string/tab_feed_label" />
    <item
        android:id="@id/menu_tv" android:icon="@drawable/ic_menu_tv"
        android:title="@string/tab_live_label" />
    <item
        android:id="@id/sportsFragment"
        android:icon="@drawable/ic_menu_sports"
        android:title="@string/tab_sports_label" />
    <item
        android:id="@id/movieFragment"
        android:icon="@drawable/ic_menu_movie"
        android:title="@string/tab_movies_label" />
    <item
        android:id="@id/dramaSeriesFragment"
        android:icon="@drawable/ic_menu_drama_series"
        android:title="@string/tab_webseries_label" />
</menu>