<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myChannelDetail"
            type="com.banglalink.toffee.model.MyChannelDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <TextView
            android:id="@+id/lets_fill_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textSize="16sp"
            android:text="@string/lets_fill_some_basic_info_text"
            android:textAlignment="center"
            android:textColor="@color/main_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"/>
    
        <EditText
            android:id="@+id/name_et"
            style="@style/LeadingIconSingleLineInputFieldStyle"
            app:drawableStartCompat="@drawable/ic_user"
            android:autofillHints="Name"
            android:hint="@string/your_name_text"
            android:inputType="textCapWords"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@={myChannelDetail.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lets_fill_tv"/>
    
        <TextView
            android:id="@+id/error_name_tv"
            style="@style/ErrorTextStyle"
            android:text="@string/name_error_text"
            app:layout_constraintEnd_toEndOf="@+id/name_et"
            app:layout_constraintStart_toStartOf="@+id/name_et"
            app:layout_constraintTop_toBottomOf="@+id/name_et"
            tools:visibility="visible" />
    
        <EditText
            android:id="@+id/address_et"
            style="@style/LeadingIconSingleLineInputFieldStyle"
            app:drawableStartCompat="@drawable/ic_location"
            android:hint="@string/enter_your_address_text"
            android:maxLines="2"
            android:text="@={myChannelDetail.address}"
            android:autofillHints="Enter your address"
            android:layout_marginTop="16dp"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_name_tv"/>
    
        <TextView
            android:id="@+id/error_address_tv"
            style="@style/ErrorTextStyle"
            android:text="@string/address_null_error_text"
            app:layout_constraintEnd_toEndOf="@+id/address_et"
            app:layout_constraintStart_toStartOf="@+id/address_et"
            app:layout_constraintTop_toBottomOf="@+id/address_et"
            tools:visibility="visible" />
    
        <TextView
            android:id="@+id/date_of_birth_tv"
            style="@style/SingleLineTextFieldStyle"
            android:layout_marginTop="16dp"
            app:drawableStartCompat="@drawable/ic_date_icon"
            android:hint="@string/date_of_birth_text"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_address_tv" />
    
        <TextView
            android:id="@+id/error_date_tv"
            style="@style/ErrorTextStyle"
            android:visibility="visible"
            android:text="@string/Date_of_birth_must_be_match"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@+id/date_of_birth_tv"
            app:layout_constraintStart_toStartOf="@+id/date_of_birth_tv"
            app:layout_constraintTop_toBottomOf="@+id/date_of_birth_tv" />
    
        <EditText
            android:id="@+id/email_et"
            style="@style/LeadingIconSingleLineInputFieldStyle"
            app:drawableStartCompat="@drawable/ic_email"
            android:drawableEnd="@{myChannelDetail.isEmailVerified ? @drawable/ic_verified : @drawable/ic_not_verified}"
            android:paddingEnd="10dp"
            android:autofillHints="Enter your email"
            android:hint="@string/enter_your_email_text"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:text="@={myChannelDetail.email}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_date_tv"/>
    
        <TextView
            android:id="@+id/error_email_tv"
            style="@style/ErrorTextStyle"
            android:visibility="visible"
            android:text="@string/verification_email_sent"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@+id/email_et"
            app:layout_constraintStart_toStartOf="@+id/email_et"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />
    
        <EditText
            android:id="@+id/nid_et"
            style="@style/SingleLineInputFieldStyle"
            android:layout_marginTop="16dp"
            app:drawableStartCompat="@drawable/ic_nid_icon"
            android:drawableEnd="@{myChannelDetail.isNIDVerified ? @drawable/ic_verified : @drawable/ic_not_verified}"
            android:paddingEnd="10dp"
            android:hint="@string/nid_number"
            android:text="@{myChannelDetail.nationalIdNo}"
            android:enabled="@{!myChannelDetail.isNIDVerified}"
            android:textColor="@{myChannelDetail.isNIDVerified ? @color/switchUnCheckedColor : @color/cardTitleColor}"
            android:drawablePadding="12dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_email_tv" />
    
        <TextView
            android:id="@+id/nid_warning_tv"
            style="@style/ErrorTextStyle"
            android:visibility="visible"
            android:text="@string/your_nid_must_match"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@+id/nid_et"
            app:layout_constraintStart_toStartOf="@+id/nid_et"
            app:layout_constraintTop_toBottomOf="@+id/nid_et" />
        
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/terms_and_conditions_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:button="@drawable/custom_checkbox"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/i_agree_to_the_text"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintEnd_toStartOf="@+id/terms_and_conditions_tv"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nid_warning_tv" />
    
        <TextView
            android:id="@+id/terms_and_conditions_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingVertical="4dp"
            android:gravity="center_vertical"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorAccent"
            android:textColorLink="@drawable/text_selector2"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="@+id/terms_and_conditions_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/terms_and_conditions_checkbox"
            app:layout_constraintTop_toTopOf="@+id/terms_and_conditions_checkbox" />
        
        <Button
            android:id="@+id/save_btn"
            style="@style/ButtonStyleSolidSave"
            android:text="@string/submit_button_text"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms_and_conditions_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>